# tiny_xla

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_integration.py
tests/core/: test_context.py  test_graph.py  test_types.py
tests/lowering/: test_rules.py
tests/memory/: test_planner.py
tests/ops/: test_arithmetic.py  test_array.py  test_control_flow.py  test_inputs.py  test_nn.py  test_nn_ops.py
tests/passes/: test_memory_analysis.py  test_pass_base.py  test_pass_manager.py
tests/passes/optimizations/: test_dce.py
tiny_xla/backends/: cpu_backend.py
tiny_xla/backends/kernels/: templates.py
tiny_xla/backends/kernels/cpu/: matmul.c
tiny_xla/core/: context.py  graph.py  operation.py  types.py
tiny_xla/lowering/: lowering_pass.py  rules.py
tiny_xla/memory/: planner.py
tiny_xla/ops/: __init__.py  arithmetic.py  array.py  control_flow.py  inputs.py  matrix.py  nn.py  nn_ops.py  primitives.py
tiny_xla/passes/: memory_analysis.py  pass_base.py  pass_manager.py
tiny_xla/passes/optimizations/: dead_code_elimination.py
tiny_xla/utils/: errors.py  logger.py
